// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serve fs output: 00 manifest.json 1`] = `
Object {
  "content_scripts": Array [
    Object {
      "js": Array [
        "assets/content-script-loader.content1.ts.hash.hash.js",
      ],
      "matches": Array [
        "https://google.com/*",
      ],
    },
    Object {
      "js": Array [
        "assets/content-script-loader.content2.ts.hash.hash.js",
      ],
      "matches": Array [
        "https://bing.com/*",
      ],
    },
  ],
  "manifest_version": 3,
  "name": "test extension",
  "version": "0.1.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "<all_urls>",
      ],
      "resources": Array [
        "*",
        "**/*",
      ],
      "use_dynamic_url": true,
    },
  ],
}
`;

exports[`serve fs output: 01 output files 1`] = `
Array [
  "assets/content-script-client.hash.js",
  "assets/content-script-loader.content1.ts.hash.hash.js",
  "assets/content-script-loader.content2.ts.hash.hash.js",
  "assets/content1.ts.hash.js",
  "assets/content2.ts.hash.js",
  "assets/font.hash.otf",
  "assets/image.hash.png",
  "assets/precontroller.hash.js",
  "assets/script.ts.hash.js",
  "manifest.json",
]
`;

exports[`serve fs output: assets/content-script-client.hash.js 1`] = `
"let port;
setupPort();
setInterval(() => port?.postMessage({ type: \\"ping\\" }), 5e3);
setInterval(setupPort, 5 * 60 * 1e3);
function setupPort() {
  port?.disconnect();
  port = chrome.runtime.connect({ name: \\"@crx/client\\" });
  port.postMessage({ type: \\"connected\\", url: import.meta.url });
  port.onMessage.addListener(handlePortMessage);
}
function handlePortMessage(payload) {
  switch (payload.type) {
    case \\"connected\\":
      console.log(\\"[vite-crx] connected.\\");
      break;
    case \\"custom\\":
      if (payload.event === \\"runtime-reload\\")
        handleRuntimeReload();
      break;
    default:
      console.log(\\"[vite]\\", payload);
      break;
  }
}
function handleRuntimeReload() {
  console.log(\\"[vite-crx] runtime reload.\\");
  setTimeout(() => location.reload(), 1e3);
}
"
`;

exports[`serve fs output: assets/content-script-loader.content1.ts.hash.hash.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/content-script-client.hash.js\\")
    );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/content1.ts.hash.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`serve fs output: assets/content-script-loader.content2.ts.hash.hash.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/content-script-client.hash.js\\")
    );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/content2.ts.hash.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`serve fs output: assets/content1.ts.hash.js 1`] = `
"var icon = \\"/assets/image.hash.png\\";

var script = \\"/assets/script.ts.hash.js\\";

console.log(\\"content.ts\\", { icon, script });
"
`;

exports[`serve fs output: assets/content2.ts.hash.js 1`] = `
"var font = \\"/assets/font.hash.otf\\";

console.log(\\"content2.ts\\", { font });
"
`;

exports[`serve fs output: assets/precontroller.hash.js 1`] = `
"setTimeout(() => location.reload(), 100);
"
`;

exports[`serve fs output: assets/script.ts.hash.js 1`] = `
"console.log(\\"main world script\\");
"
`;
